...
        verticalArrangement = Arrangement.Center
    ) {
        Text("Events", fontSize = 22.sp, modifier = Modifier
            .padding(vertical = 52.dp)
            .clickable { onEventsClick() })
        Text("Calendar", fontSize = 22.sp, modifier = Modifier.padding(vertical = 52.dp))
        Text("Class Notes", fontSize = 22.sp, modifier = Modifier.padding(vertical = 52.dp).clickable { onCoursesClick() })

        if (isUserLoggedIn) {
            Text("Favorite Notes", fontSize = 22.sp, modifier = Modifier.padding(vertical = 52.dp).clickable { onFavoriteNotesClick() })
            Text("Logout", fontSize = 22.sp, modifier = Modifier
                .padding(vertical = 52.dp)
                .clickable { onLogoutClick() })
        } else {
            Text("Login", fontSize = 22.sp, modifier = Modifier
                .padding(vertical = 52.dp)
                .clickable { onLoginClick() })
        }
    }
}

